testy-dev1/templates/prometheus-example/cluster-monitoring/ingress-prometheus.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-k8s
  namespace: testy-dev1
  annotations:
    cert-manager.io/issuer: letsencrypt-stg
    cert-manager.io/issuer-kind: ClusterIssuer
spec:
  rules:
  - host: prometheus-op.skrypalle.dk
    http:
      paths:
      - backend:
          serviceName: prometheus-k8s
          servicePort: web
        path: /
  tls:
  - hosts:
    - prometheus-op.skrypalle.dk
